# Conductor

./: .gitignore  Cargo.toml  Makefile  README.md  TODO  build.rs  make.bat  test  test.rs
.github/workflows/: ci.yml  rust.yml
.rpm/: conductor.spec
rpm-docker-action/: Dockerfile  action.yml  entrypoint.sh
src/: cfg.rs  input.rs  ipc.rs  keys.rs  main.rs  panic.rs  resources.rs  scrn.rs  state.rs  util.rs  webserver.rs  ws.rs
src/input/: mapping.rs
src/keys/: arch.rs  default.rs  linux.rs  mac.rs  win.rs
src/keys/arch/: default.rs  linux.rs  win.rs
src/keys/mac/: mgr.rs
src/keys/mac/mgr/: ffi.rs
src/scrn/: default.rs  linux.rs
src/webserver/: sock.rs
ui/: elm.json  index.html  package.json
ui-react/: package.json  webpack.config.js
ui-react/src/: App.tsx  DriverStation.tsx  index.tsx  ipc.ts  store.ts
ui-react/src/components/: ConfigPage.tsx  ControlPage.tsx  JoysticksPage.tsx
ui-react/src/components/config/: Configurations.tsx
ui-react/src/components/control/: EnableButtons.tsx  ModeList.tsx  StdoutView.tsx  TelemetryList.tsx
ui/elm-stuff/0.19.0/: Ipc.elmi  Ipc.elmo  Main.elmi  Main.elmo  Model.elmi  Model.elmo  Ui.elmi  Ui.elmo
ui/main-window/: package-lock.json  package.json
ui/main-window/src/: DriverStation.tsx  index.tsx  ipc.ts  store.ts
ui/main-window/src/components/: ConfigPage.tsx  ControlPage.tsx  JoysticksPage.tsx
ui/main-window/src/components/config/: Configurations.tsx
ui/main-window/src/components/control/: AllianceStationSelector.tsx  EnableButtons.tsx  ModeList.css  ModeList.tsx  TelemetryList.tsx
ui/main-window/src/components/joysticks/: Joystick.tsx
ui/public/: index.html
ui/src/: App.tsx  DriverStation.tsx  Ipc.elm  Main.elm  Model.elm  StdoutWindow.elm  Ui.elm
ui/src/Lib/: Errors.elm  Ipc.elm  ListUtil.elm  Model.elm  Ports.elm  Ui.elm
ui/src/components/control/: TelemetryList.tsx
ui/src/lib/: Errors.elm  Ipc.elm  ListUtil.elm  Model.elm  Ports.elm  Ui.elm
ui/stdout/: package-lock.json  package.json
ui/stdout/public/: index.html
ui/stdout/src/: StdoutWindow.tsx  index.tsx  ipc.ts  store.ts
web/: bundle.min.js  index.html  index.js  stdout.html
