[package]
name = "conductor"
version = "0.1.0"
authors = ["Redrield <redrield@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = "0.6.2"
lazy_static = "1.4.0"
rust-embed = "5.5.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
ds = "1.2.3"
chrono = "0.4.11"
gilrs = "0.7.4"
spin = "0.5.2"
priomutex = "0.3.1"
actix-web = "2.0.0"
actix-rt = "1.1.0"
mime_guess = "2.0.3"
futures = "0.3.4"
env_logger = "0.7.1"
actix-web-actors = "2.0.0"
actix = "0.9.0"
log = "0.4.11"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.74"
x11 = { version = "2.18.2", features = ["xlib", "xinput"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.74"
core-graphics = "0.21.0"
objc = "0.2.7"
cocoa = "0.23.0"
block = "0.1.6"
core-foundation = "0.9.0"
